Fixed title size on mobile

--- a/styles.css
+++ b/styles.css
@@ -195,6 +195,7 @@ footer {
 @media only screen and (max-width: 600px) {
   .lead {
     flex-wrap: wrap;
+    font-size: 3rem;
   }
   .blockquote {
     text-align: center;
